crates/kul-wasm/tests/snapshots/export_graph__example_09_multi_adoption_cytoscape.snap
---
source: crates/kul-wasm/tests/export_graph.rs
expression: json
---
{
  "ok": true,
  "schema": 1,
  "kul": "0.1",
  "graph": {
    "nodes": [
      {
        "data": {
          "id": "p:ravi",
          "type": "person",
          "name": "Ravi Mehta",
          "gender": "male",
          "born": {
            "value": "1958-01-14",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:priya",
          "type": "person",
          "name": "Priya Mehta",
          "gender": "female",
          "born": {
            "value": "1960-04-22",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:anita",
          "type": "person",
          "name": "Anita Rao",
          "gender": "female",
          "born": {
            "value": "1952-06-08",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:bharat",
          "type": "person",
          "name": "Bharat Rao",
          "gender": "male",
          "born": {
            "value": "1950-12-30",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:chen",
          "type": "person",
          "name": "Chen Liu",
          "gender": "male",
          "born": {
            "value": "1955-09-09",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:dara",
          "type": "person",
          "name": "Dara Liu",
          "gender": "female",
          "born": {
            "value": "1957-02-17",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:sam",
          "type": "person",
          "name": "Sam",
          "gender": "other",
          "born": {
            "value": "1982-05-19",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "m:m_ravi_priya",
          "type": "marriage",
          "start": {
            "value": "1980-11-10",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "m:m_anita_bharat",
          "type": "marriage",
          "start": {
            "value": "1975-03-22",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "m:m_chen_dara",
          "type": "marriage",
          "start": {
            "value": "1980-07-04",
            "precision": "day",
            "circa": false
          }
        }
      }
    ],
    "edges": [
      {
        "data": {
          "source": "m:m_ravi_priya",
          "target": "p:ravi",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_ravi_priya",
          "target": "p:priya",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_anita_bharat",
          "target": "p:anita",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_anita_bharat",
          "target": "p:bharat",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_chen_dara",
          "target": "p:chen",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_chen_dara",
          "target": "p:dara",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_ravi_priya",
          "target": "p:sam",
          "type": "biological_child"
        }
      },
      {
        "data": {
          "source": "m:m_anita_bharat",
          "target": "p:sam",
          "type": "adoptive_child",
          "start": {
            "value": "1985-04-01",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "source": "m:m_chen_dara",
          "target": "p:sam",
          "type": "adoptive_child",
          "start": {
            "value": "1992-08-15",
            "precision": "day",
            "circa": false
          }
        }
      }
    ]
  }
}
