crates/kul-wasm/tests/snapshots/export_graph__example_10_disconnected_lineages_and_orphan_cytoscape.snap
---
source: crates/kul-wasm/tests/export_graph.rs
expression: json
---
{
  "ok": true,
  "schema": 1,
  "kul": "0.1",
  "graph": {
    "nodes": [
      {
        "data": {
          "id": "p:ramesh",
          "type": "person",
          "name": "Ramesh Iyer",
          "gender": "male",
          "born": {
            "value": "1925-01-10",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:sita",
          "type": "person",
          "name": "Sita Iyer",
          "gender": "female",
          "born": {
            "value": "1928-04-22",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:arjun",
          "type": "person",
          "name": "Arjun Iyer",
          "gender": "male",
          "born": {
            "value": "1950-08-30",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:zara",
          "type": "person",
          "name": "Zara Khan",
          "gender": "female",
          "born": {
            "value": "1965-11-04",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:hiro",
          "type": "person",
          "name": "Hiro Kato",
          "gender": "male",
          "born": {
            "value": "1932-03-09",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:yuki",
          "type": "person",
          "name": "Yuki Kato",
          "gender": "female",
          "born": {
            "value": "1934-09-21",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "p:mei",
          "type": "person",
          "name": "Mei Kato",
          "gender": "female",
          "born": {
            "value": "1958-12-11",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "m:m_ramesh_sita",
          "type": "marriage",
          "start": {
            "value": "1948-06-15",
            "precision": "day",
            "circa": false
          }
        }
      },
      {
        "data": {
          "id": "m:m_hiro_yuki",
          "type": "marriage",
          "start": {
            "value": "1956-05-04",
            "precision": "day",
            "circa": false
          }
        }
      }
    ],
    "edges": [
      {
        "data": {
          "source": "m:m_ramesh_sita",
          "target": "p:ramesh",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_ramesh_sita",
          "target": "p:sita",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_hiro_yuki",
          "target": "p:hiro",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_hiro_yuki",
          "target": "p:yuki",
          "type": "spouse"
        }
      },
      {
        "data": {
          "source": "m:m_ramesh_sita",
          "target": "p:arjun",
          "type": "biological_child"
        }
      },
      {
        "data": {
          "source": "m:m_hiro_yuki",
          "target": "p:mei",
          "type": "biological_child"
        }
      }
    ]
  }
}
